exports[`test an add more licenses button should be shown when no more licenses are available 1`] = `
<li
  className="iSKWSU">
  <span
    className="column--site-subscription-detail-toggle-logo fvaPPL">
    <span
      className="ipTaeZ">
      <div>
        <div
          aria-checked={true}
          aria-label="very-unique-product-id"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <span
    className="column--site-subscription-detail-details fvaPPL">
    <span
      className="kXXZFn">
      Subscription name
    </span>
    <span
      className="kwOabh">
      <span>
        0/20 remaining
      </span>
    </span>
    <a
      className="ddFsZG"
      href="http://store.url.com">
      <span>
        Get additional subscriptions
      </span>
    </a>
  </span>
  <div>
    <noscript />
  </div>
  <span
    className="column--site-subscription-detail-button fvaPPL">
    <a
      className="dAFQbA"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;

exports[`test the sitesubscription matches the snapshot 1`] = `
<li
  className="iSKWSU">
  <span
    className="column--site-subscription-detail-toggle-logo fvaPPL">
    <span
      className="ipTaeZ">
      <div>
        <div
          aria-checked={true}
          aria-label="very-unique-product-id"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <span
    className="column--site-subscription-detail-details fvaPPL">
    <span
      className="kXXZFn">
      Subscription name
    </span>
    <span
      className="kwOabh">
      <span>
        6/20 remaining
      </span>
    </span>
  </span>
  <div>
    <noscript />
  </div>
  <span
    className="column--site-subscription-detail-button fvaPPL">
    <a
      className="dAFQbA"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;
